--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,12 +1,39 @@
 <%- include('partials/header.ejs') %>
 
-<div class="form-container">
-  <form action="/submit" method="POST">
-    <div class="input-group">
-      <input type="text" id="zip" name="zip" placeholder="Zip Code" style="margin-right: 5px;" required>
-      <input type="submit" value="Submit">
-    </div>
-  </form>
+<div class="main-container">
+  <div class="image-container">
+    <img src="/images/umbrella.svg" id="umbrella" class="<%= weatherData.weather %>">
+    <img src="/images/sunglasses.svg" id="sunglasses" class="<%= weatherData.weather %>">
+    <img src="/images/beanie.svg" id="beanie" class="<%= weatherData.tempAttire %>">
+  </div>
+
+  <div class="content-container">
+    <% if (weatherData.weather !== "default") { %>
+      <div class="weather-container <%= weatherData.weather %>">
+        <h2><%= weatherData.temp %>º F</h2>
+        <p>Feels Like: <%= weatherData.feels %>º F</p>
+        <p><%= weatherData.city %>, <%= weatherData.state %></p>
+      </div>
+    <% } else { %>
+      <div class="weather-container default">
+        <p>Enter a Zip Code to get Weather Data</p>
+      </div>
+    <% } %>
+
+    <form action="/submit" method="POST">
+      <div class="input-group">
+        <input type="text" id="zip" name="zip" placeholder="Zip Code" style="margin-right: 5px;" required>
+        <input type="submit" value="Submit">
+      </div>
+    </form>
+  </div>
+
+  <div class="image-container">
+    <img src="/images/tshirt.svg" id="tshirt" class="<%= weatherData.tempAttire %>">
+    <img src="/images/sweater.svg" id="sweater" class="<%= weatherData.tempAttire %>">
+    <img src="/images/coat.svg" id="coat" class="<%= weatherData.tempAttire %>">
+  </div>
 </div>
+
 
 <%- include('partials/footer.ejs') %>
