--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -7,10 +7,9 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link rel="stylesheet" href="styles/main.css">
   <title>Weather Wardrobe</title>
+</head>
+
+<body class="<%= weatherData.weather %> ">
   <header>
     <h1>Weather Wardrobe</h1>
   </header>
-</head>
-
-<body class="<%= weather %> ">
-  
